fixed spacing for title and button

--- a/src/app/skills/skill-list/skill-list.component.scss
+++ b/src/app/skills/skill-list/skill-list.component.scss
@@ -26,11 +26,13 @@ div.close {
 
 .container {
     margin: 3em auto;
+    margin-top: 4em;
     width: 90%;
     max-width: 1100px;
 }
 
 h2 {
+    
     position: relative;
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
